src/test/deca/codegen/valid/SansObjet/Print-int.deca
// Description:
//    Declaration of a int variable with initialization.
// 
// Results:
//     3
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x = 3 ;
    print(x);
}
