src/test/deca/codegen/invalid/SansObjet/Mod-Int-ZeroVar.deca
// Description:
//    Modulo of an int by a zero variable
//
// Results:
//     line 13
//     Error: division by zero
//
// Historique:
//    cree le 13/01/2022

{
    int y = 0;
    int x = 5 % 0;
}
